<resources>
    <string name="app_name">News App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="samaa">SAMAA</string>
    <string name="ary">ARY</string>
    <string name="duniya">DUNIYA</string>
    <string name="express">Express</string>
    <string name="bol">Bol</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="geo">Geo</string>
    <string name="abbtakk">AbbTakk</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>